[package]
name = "plume_wallet"
version = "0.0.1"
authors = ["Amit Kumar Jaiswal <amitkumarj441@gmail.com>"]

[dependencies]
base64 = "0.7.0"
bip39 = "0.4.1"
bitcoin = "0.10.1"
rand = "0.3"
ring-pwhash = { path = "../ring-pwhash/" }
secp256k1 = "0.6"
serde = "1.0.15"
serde_derive = "1.0"
serde_json = "1.0.3"
